# Modern-CMake-VI-VN

./: README.md  SUMMARY.md  _config.yml  _toc.yml  pixi.toml
chapters/: basics.md  features.md  install.md  packages.md  projects.md  testing.md
chapters/basics/: comms.md  example.md  functions.md  programs.md  structure.md  variables.md
chapters/features/: cpp11.md  debug.md  ides.md  modules.md  small.md  utilities.md
chapters/install/: exporting.md  installing.md  packaging.md
chapters/intro/: dodonot.md  installing.md  newcmake.md  running.md
chapters/projects/: download.md  fetch.md  submodule.md
chapters/testing/: catch.md  googletest.md
examples/: CMakeLists.txt
examples/extended-project/: CMakeLists.txt
examples/fetch/: CMakeLists.txt
examples/root-dict/: CMakeLists.txt  README.md
examples/root-simple/: CMakeLists.txt  README.md
examples/root-usefile/: CMakeLists.txt  README.md
examples/simple-project/: CMakeLists.txt
practice/basic/: CMakeLists.txt
practice/basic/app/: calc.cpp
practice/basic/include/calc/: lib.hpp
practice/basic/src/: calclib.cpp
